[package]
name = "linfa-ensemble"
version = "0.1.0"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-ml/linfa"
authors = ["Josh Abrams <jabrams.nc@gmail.com>"]
keywords = ["machine-learning", "linfa", "ensemble", "supervised"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.15" , features = ["rayon", "approx"]}
ndarray-rand = "0.14"
rand = { version = "0.8", features = ["small_rng"] }

linfa = { version = "0.4.0", path = "../.." }

[dev-dependencies]
criterion = "0.3.5"
approx = "0.5"
